Fix links overflow on mobile

--- a/index.css
+++ b/index.css
@@ -149,6 +149,10 @@ body {
     box-shadow: 0.5px 0.5px 10px #efabda;
 }
 
+/* View-Width Scaling */
+
+/* Implement here */
+
 /* Main Section of Page */
 .main {
     width: calc(100% - 300px);
@@ -390,6 +394,17 @@ body {
     padding-top: 25px;
     padding-bottom: 3vh;
     text-align: center;
+    margin-bottom: 3vh;
+}
+
+@media screen and (max-width: 459px) {
+  .links-body a {
+     font-size: 3cqmin !important;
+  }
+}
+
+.links-body a {
+     font-size: medium;
 }
 
 .linkedin-btn {
